--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,3 +31,13 @@ header nav ul li {
     list-style: none;
     margin-left: 51px;
 }
+
+.btn-primary {
+    font-weight: 700;
+    font-size: 20px;
+    color: #FFFFFF;
+    background-color: #FD6E0A;
+    padding: 20px 35px;
+    border: 0;
+    border-radius: 5px;
+}
