--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,10 +8,10 @@
 
 /* Style for Header and Navigation: */
 
-header {
+header nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 220px;
+    margin: 50px 220px 0;
 }
 
 header h2 {
@@ -25,11 +25,14 @@ header h2 span {
 
 header nav ul {
     display: flex;
+    align-items: center;
 }
 
 header nav ul li {
     list-style: none;
     margin-left: 51px;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 .btn-primary {
@@ -40,4 +43,43 @@ header nav ul li {
     padding: 20px 35px;
     border: 0;
     border-radius: 5px;
+}
+
+/* Style for Banner */
+
+.banner {
+    display: flex;
+    align-items: center;
+    margin: 0 220px;
+}
+
+.banner .banner-left {
+    width: 50%;
+}
+
+.banner h3 {
+    font-size: 35px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+}
+
+.banner h1 {
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+    margin-bottom: 20px;
+}
+
+.banner p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #757575;
+    margin-bottom: 30px;
+    text-align: justify;
+}
+
+.banner img {
+    width: 50%;
+    margin-left: 100px;
 }
