--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,7 +18,7 @@
 header nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 220px 0;
+    padding: 50px 220px 0;
 }
 
 header h2 {
@@ -172,4 +172,103 @@ main .about-me .my-info .my-value {
     font-size: 16px;
     line-height: 28px;
     color: #757575;
+}
+
+/* My Resume Section */
+
+.my-resume {
+    /* background: #1E1E1E; */
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.my-resume h1 {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 48px;
+    text-align: center;
+    color: #181818;
+    margin-bottom: 120px;
+}
+
+.resume-container {
+    display: flex;
+}
+
+.resume-title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 41px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+.resume-subtitle {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.work-time {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    color: #757575;
+    margin-bottom: 20px;
+}
+
+.resume-description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+hr {
+    width: 518px;
+    border: 1px solid #D1D1D1;
+    margin-bottom: 30px;
+}
+
+.my-resume .btn-primary {
+    text-align: center;
+}
+
+/* Contact Style */
+
+.contact-me {
+    background: #FFF8F3;
+    padding-top: 130px;
+    display: flex;
+}
+
+.contact-title {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 48px;
+    text-align: center;
+    color: #181818;
+    margin-bottom: 20px;
+}
+
+.contact-me p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+.contact-me a {
+    margin-right: 20px;
+}
+
+.form-block {
+    display: block;
+    width: 461px;
+    margin-bottom: 24px;
+    padding: 20px;
 }
